# airflow-scrapy-poc

./: .gitignore
airflow/: README.md  airflow.cfg  requirements.txt
airflow/dags/: sample_spider.py
crawler/: .dockerignore  Dockerfile  build.sh  docker-compose.yml  pyproject.toml
crawler/src/: middlewares.py  settings.py
crawler/src/spiders/: sample.py
